--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <strong>Simplifying Your Effort</strong></h1>
         <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Your daily dose of AI-powered conversation, minus the awkward silences!</p>
         <div class="mbr-section-btn">
-          <a class="btn btn-white-outline display-7" href="https://https://huggingface.co/spaces/kendrickfff/ask-me-anything">Join Now</a>
+          <a class="btn btn-white-outline display-7" href="//https://huggingface.co/spaces/kendrickfff/ask-me-anything">Join Now</a>
         </div>
       </div>
     </div>
